--- a/v2.6/spring-gumball/spring-gumball/src/main/resources/templates/gumball.html
+++ b/v2.6/spring-gumball/spring-gumball/src/main/resources/templates/gumball.html
@@ -13,6 +13,11 @@
 
 <!-- FORM SECTION -->
 <form name="form" th:object="${command}" method="post" action="">
+
+  <input type="hidden" name="state" id="state" th:field="*{state}" />
+  <input type="hidden" name="ts" id="ts" th:field="*{timestamp}" />
+  <input type="hidden" name="hash" id="hash" th:field="*{hash}" />
+
     <p>
     <table id="msg" align="center" style="width:40%">
       <tr>
