--- a/v2.6/spring-gumball/spring-gumball-v3.0/src/main/resources/static/styles.css
+++ b/v2.6/spring-gumball/spring-gumball-v3.0/src/main/resources/static/styles.css
@@ -40,3 +40,10 @@ span.validationError {
   font-size: 18px;
   border: none;
 }
+
+.thankyou {
+    border: 1px dash gray ;
+    text-align: center;
+}
+
+
