--- a/v2.6/spring-gumball/spring-gumball-v3.0/src/main/resources/templates/gumball.html
+++ b/v2.6/spring-gumball/spring-gumball-v3.0/src/main/resources/templates/gumball.html
@@ -32,7 +32,7 @@
     <p align="center"> <img th:src="@{/images/giant-gumball-machine.jpg}" width="385" height="316"/></p>
     <br/>
     <p align="center">
-        Special Instructions:  <input type="text" id="message" th:field="*{message}"/>
+        Special Instructions:  <input type="text" id="instructions" th:field="*{instructions}"/>
         <br/>
         <br/>
         <br/>
@@ -46,6 +46,9 @@
 <br/>
 <br/>
 <br/>
+<div class="thankyou">
+    <span th:text="${thankyou}" />
+</div>
 <br/>
 <br/>
 <br/>
