update with special instructions handling

--- a/v2.7/spring-gumball/spring-gumball-v3.1/src/main/resources/static/styles.css
+++ b/v2.7/spring-gumball/spring-gumball-v3.1/src/main/resources/static/styles.css
@@ -40,3 +40,9 @@ span.validationError {
   font-size: 18px;
   border: none;
 }
+
+.thankyou {
+    border: 1px dash gray ;
+    text-align: center;
+}
+
