added logout button

--- a/v2.7/spring-gumball/spring-gumball-v3.3/src/main/resources/static/styles.css
+++ b/v2.7/spring-gumball/spring-gumball-v3.3/src/main/resources/static/styles.css
@@ -45,3 +45,10 @@ span.validationError {
     border: 1px dash gray ;
     text-align: center;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10px;
+}
