--- a/v2.7/spring-gumball/spring-gumball-v3.3/src/main/resources/templates/gumball.html
+++ b/v2.7/spring-gumball/spring-gumball-v3.3/src/main/resources/templates/gumball.html
@@ -11,6 +11,13 @@
 <body>
 <h1 align="center">Welcome to the Gumball Machine</h1>
 
+<!-- LOGOUT SECTION -->
+<div class="center">
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
+</div>
+
 <!-- FORM SECTION -->
 <form name="form" th:object="${command}" method="post" th:action="@{/gumball}">
 
